force-app/main/default/objects/Lead_Scoring_Setting__mdt/Lead_Scoring_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Setting for the Lead Scoring</description>
    <label>Lead Scoring Setting</label>
    <pluralLabel>Lead Scoring Settings</pluralLabel>
</CustomObject>