force-app/main/default/objects/Lead_Scoring_Setting__mdt/fields/Range_Min__c.field-meta.xml
<CustomField>
    <fullName>Range_Min__c</fullName>
    <label>Range Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>